--- a/src/components/Price/PriceStyle.css
+++ b/src/components/Price/PriceStyle.css
@@ -9,7 +9,7 @@
   text-align: center;
   position: relative;
   cursor: pointer;
-  box-shadow: 0 10px 15px -3px rgba(33,150,243,.4),0 4px 6px -4px rgba(33,150,243,.4);
+  box-shadow: 0 10px 15px -3px #2196f366,0 4px 6px -4px rgba(33,150,243,.4);
   border-radius: 10px;
   background-color: #6B6ECC;
   background: linear-gradient(45deg, #04051dea 0%, #2b566e 100%);
