--- a/src/components/Price/PriceStyle.css
+++ b/src/components/Price/PriceStyle.css
@@ -53,7 +53,7 @@ button {
   font-weight: 700;
   font-size: .75rem;
   padding: 0.75rem 1.5rem;
-  background-color: rgb(33 150 243);
+  background-color: #2194f2;
   border-radius: 0.5rem;
   width: 90%;
   text-shadow: 0px 4px 18px #2c3442;
