--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,13 @@ html{
     scroll-behavior: smooth;
   }
 
-/* src/index.css o donde tengas tus estilos globales */
+
 .no-scrollbar::-webkit-scrollbar {
     display: none;
   }
   .no-scrollbar {
-    -ms-overflow-style: none;  /* Internet Explorer 10+ */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none; 
+    scrollbar-width: none;  
   }
   
 
